--- a/package.json
+++ b/package.json
@@ -16,10 +16,16 @@
     "@swc/helpers": "~0.5.11",
     "@types/node": "~18.16.9",
     "esbuild": "^0.19.2",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.1.2",
     "nx": "21.2.2",
     "prettier": "^2.6.2",
     "tslib": "^2.3.0",
     "typescript": "~5.8.2"
   },
-  "dependencies": {}
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "nx run-many --target=lint --all --fix"
+    ]
+  }
 }
