--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@nx/js": "21.2.2",
     "@nx/node": "21.2.2",
     "@nx/react": "21.2.2",
+    "@nx/vite": "^21.2.2",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
