Auth back end supabase cfg

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,9 @@
     },
     {
       "file": ".copilot-tailwind.md"
+    },
+    {
+      "file": ".copilot-project-definition.md"
     }
   ],
   "nxConsole.generateAiAgentRules": true
