feat: Modernize frontend with TypeScript, Tailwind CSS, and Apple-style design
- Upgrade to TypeScript throughout the frontend
- Add Tailwind CSS with PostCSS configuration
- Implement Apple-style homepage with branding and authentication
- Create reusable UI components (Button, Card, Input, AIDDLogo)
- Add responsive design with modern layout
- Clean up legacy JS files and configurations
- Remove node_modules from git tracking
- Update dependencies and build configuration
- Add placeholder backend authentication files

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,20 @@ libs/*/node_modules/
 .nx/installation
 .nx/cache
 .nx/workspace-data
+dist/
+build/
+coverage/
+tmp/
+.vscode/
+.DS_Store
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env.development
+.env.test
+.env.production
 
 
 .cursor/rules/nx-rules.mdc
