--- a/apps/backend/project.json
+++ b/apps/backend/project.json
@@ -1,13 +1,14 @@
 {
   "name": "backend",
-  "$schema": "../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "backend/src",
+  "$schema": "../../node_modules/nx/schemas/project-schema.json",
+  "sourceRoot": "apps/backend/src",
   "projectType": "application",
   "tags": [],
   "targets": {
     "build": {
       "executor": "nx:run-commands",
       "options": {
+        "cwd": "apps/backend",
         "command": "webpack-cli build",
         "args": ["--node-env=production"]
       },
