--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@tailwindcss/postcss": "^4.1.11",
+    "@tailwindcss/vite": "^4.1.11",
     "@types/jest": "^29.5.12",
     "@types/node": "~18.16.9",
     "esbuild": "^0.19.2",
@@ -48,11 +50,14 @@
     ]
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.1.1",
     "@nestjs/common": "^11.0.0",
     "@nestjs/core": "^11.0.0",
     "@nestjs/platform-express": "^11.0.0",
     "@supabase/supabase-js": "^2.50.3",
+    "react-hook-form": "^7.59.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.0"
+    "rxjs": "^7.8.0",
+    "zod": "^3.25.72"
   }
 }
